BZ1270654 - Formatting updates for the guide.

--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_create_a_Condition_to_check_file_contents_of_a_host.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_create_a_Condition_to_check_file_contents_of_a_host.adoc
@@ -11,35 +11,35 @@ file using a host analysis profile. See
 https://access.redhat.com/documentation/en-US/CloudForms/3.1/html/Management_Engine_5.3_Insight_Guide/index.html[CloudForms
 Management Engine Insight Guide] for instructions.
 
-. Navigate to ControlExplorer.
+. Navigate to `Control` -> `Explorer`.
 
-. Click the Conditions accordion, and select Host Conditions.
+. Click the `Conditions` accordion, and select `Host Conditions`.
 
-. Click image:../images/1847.png[image] (Configuration),
-image:../images/1848.png[image] (Add a New Host Condition).
+. Click image:../images/1847.png[image] (`Configuration`),
+image:../images/1848.png[image] (`Add a New Host Condition`).
 
-. In Basic Information, type in a Description for the condition.
+. In `Basic Information`, type in a `Description` for the condition.
 +
 image:../images/1937.png[image]
 
-. Editing the Scope area is not necessary for this procedure. Skip editing any Scope conditions.
+. Editing the `Scope` area is not necessary for this procedure. Skip editing any `Scope` conditions.
 
-. If the Expression area is not automatically opened, click
-image:../images/1851.png[image] (Edit this Expression), then edit the
+. If the `Expression` area is not automatically opened, click
+image:../images/1851.png[image] (`Edit this Expression`), then edit the
 condition area to create a general condition based on a simple
 attribute. Based on what you choose, different options appear.
 
-* Click Find, then Host.Files : Name, and the parameters to select the
+* Click `Find`, then `Host.Files : Name`, and the parameters to select the
 file that you want to check.
-* Click Check Any, Contents, Regular Expression Matches, and type the
+* Click `Check Any`, `Contents`, `Regular Expression Matches`, and type the
 expression. For example, if you want to make sure that permit root login
 is set to no, type `^\s*PermitRootLogin\s+no`.
 +
 image:../images/1936.png[image]
 
-. Click image:../images/1863.png[image] (Commit expression element changes)
+. Click image:../images/1863.png[image] (`Commit expression element changes`)
 to add the expression.
 
-. In Notes area, type in a detailed explanation of the condition.
+. In `Notes` area, type in a detailed explanation of the condition.
 
-. Click Add.
+. Click `Add`.
