--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_create_a_tag_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_create_a_tag_Action.adoc
@@ -1,18 +1,18 @@
 ==== Creating a Tag Action
 
-. Navigate to ControlExplorer.
+. Navigate to `Control` -> `Explorer`.
 
-. Click the Actions accordion, then click image:../images/1847.png[image]
-(Configuration), image:../images/1848.png[image] (Add a new Action).
+. Click the `Actions` accordion, then click image:../images/1847.png[image]
+(`Configuration`), image:../images/1848.png[image] (`Add a new Action`).
 
-. Type in a description for the action.
+. Type in a `Description` for the action.
 +
 image:../images/1928.png[image]
 
-. Select Tag from Action Type.
+. Select `Tag` from `Action Type`.
 
 . Click on the appropriate tag to apply from the list provided.
 +
 image:../images/1927.png[image]
 
-. Click Add.
+. Click `Add`.
