--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_create_an_SNMP_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_create_an_SNMP_Action.adoc
@@ -6,14 +6,14 @@ information on enabling SNMP, see
 https://access.redhat.com/documentation/en-US/CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms
 Management Engine Settings and Operations Guide].
 
-. Navigate to ControlExplorer.
+. Navigate to `Control` -> `Explorer`.
 
-. Click the Actions accordion, then click image:../images/1847.png[image]
-(Configuration), image:../images/1848.png[image] (Add a new Action).
+. Click the `Actions` accordion, then click image:../images/1847.png[image]
+(`Configuration`), image:../images/1848.png[image] (`Add a new Action`).
 
-. Enter a Description for the action.
+. Enter a `Description` for the action.
 
-. Select Send an SNMP Trap from Action Type.
+. Select `Send an SNMP` Trap from `Action Type`.
 
 . Type in the IP for the host to send the trap to, select the version of
 SNMP that you are using, and type in the Trap Object ID. Type in
@@ -36,7 +36,7 @@ Trap Object ID and Suffix Number
 
 . Type in the variables that you require in your message.
 
-. Click Add.
+. Click `Add`.
 
 ______________________________________________________________
 *Note*
