--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_simulate_Policy_Profiles_on_Virtual_Machines.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_simulate_Policy_Profiles_on_Virtual_Machines.adoc
@@ -1,24 +1,24 @@
 ==== Simulating Policy Profiles on Virtual Machines
 
-. Navigate to InfrastructureVirtual Machines, select the virtual machines
+. Navigate to `Infrastructure` -> `Virtual Machines`, select the virtual machines
 you need to evaluate.
 
-. Click image:../images/1941.png[image] (Policy), and then click
-image:../images/1947.png[image] (Policy Simulation).
+. Click image:../images/1941.png[image] (`Policy`), and then click
+image:../images/1947.png[image] (`Policy Simulation`).
 
-. From the Select a Policy Profile to add dropdown, click the policy you
+. From the `Select a Policy Profile to add` dropdown, click the policy you
 need to apply to the selected virtual machines.
 +
 image:../images/1948.png[image]
 
-. The virtual machine thumbnail displays in the Policy Simulation area.
+. The virtual machine thumbnail displays in the `Policy Simulation` area.
 
 * A check sign in the lower right quadrant of the virtual thumbnail
 shows that the virtual machine passes policy.
 * A minus sign in the lower right quadrant of the virtual thumbnail
 shows that the virtual machine fails policy.
 
-. Click on a virtual machine in the Policy Simulation area to see its
+. Click on a virtual machine in the `Policy Simulation` area to see its
 details.
 
 . Expand a policy profile by clicking on it to see its member policies and
