--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/Deleting_a_Policy.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/Deleting_a_Policy.adoc
@@ -3,11 +3,11 @@
 You can remove policies that you no longer need. You can only remove
 policies that are not assigned to a policy profile.
 
-. Navigate to ControlExplorer.
+. Navigate to `Control` -> `Explorer`.
 
-. Click the Policies accordion, and select the policy you want to remove.
+. Click the `Policies` accordion, and select the policy you want to remove.
 
-. Click image:../images/1847.png[image] (Configuration),
-image:../images/1861.png[image] (Delete this Host/VM and Instance Policy).
+. Click image:../images/1847.png[image] (`Configuration`),
+image:../images/1861.png[image] (`Delete this Host/VM and Instance Policy`).
 
-. Click OK to confirm.
+. Click `OK` to confirm.
