--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/Deleting_an_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/Deleting_an_Action.adoc
@@ -4,12 +4,12 @@ Delete unused actions to keep your environment uncluttered. You cannot
 delete default actions or actions that are currently assigned to a
 policy. The delete button is unavailable if the action is in use.
 
-. Navigate to ControlExplorer.
+. Navigate to `Control` -> `Explorer`.
 
-. Click the Actions accordion, click on the action you need to remove.
+. Click the `Actions` accordion, click on the action you need to remove.
 
-. Click image:../images/1847.png[image] (Configuration),
-image:../images/1861.png[image] (Delete this Action) on the detail view of
+. Click image:../images/1847.png[image] (`Configuration`),
+image:../images/1861.png[image] (`Delete this Action`) on the detail view of
 the tree.
 
-. Click OK to confirm.
+. Click `OK` to confirm.
