--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/Removing_Policy_Profiles_from_an_Instance.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/Removing_Policy_Profiles_from_an_Instance.adoc
@@ -1,15 +1,15 @@
 ==== Removing Policy Profiles from an Instance
 
-. Navigate to CloudsInstances, check the instances you need to remove the
+. Navigate to `Clouds` -> `Instances`, check the instances you need to remove the
 policy profile from.
 
-. Click image:../images/1941.png[image] (Policy), and then click
-image:../images/1952.png[image](Manage Policies).
+. Click image:../images/1941.png[image] (`Policy`), and then click
+image:../images/1952.png[image](`Manage Policies`).
 
-. From the Select Policy Profiles area, click on the triangle next to a
+. From the `Select Policy Profiles` area, click on the triangle next to a
 desired policy profile to expand it and see its member policies.
 
 . Uncheck the policy profile you need to remove. It turns blue to show
 that its assignment state has changed.
 
-. Click Save.
+. Click `Save`.
