--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_assign_policies_to_a_Repository.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_assign_policies_to_a_Repository.adoc
@@ -1,15 +1,15 @@
 ==== Assigning Policies to a Repository
 
-. Navigate to InfrastructureRepositories, check the repositories you need
+. Navigate to `Infrastructure` -> `Repositories`, check the repositories you need
 to assign the policy profiles to.
 
-. Click image:../images/1941.png[image] (Policy), and then click
-image:../images/1952.png[image](Manage Policies).
+. Click image:../images/1941.png[image] (`Policy`), and then click
+image:../images/1952.png[image](`Manage Policies`).
 
-. From the Select Policy Profiles area, click on the triangle next to a
+. From the `Select Policy Profiles` area, click on the triangle next to a
 desired policy profile to expand it and see its member policies.
 
 . Check the policy profiles you need to apply to the provider. It turns
 blue to show its assignment state has changed.
 
-. Click Save to confirm.
+. Click `Save` to confirm.
