--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_create_an_Assign_Profile_to_Analysis_Task_action.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_create_an_Assign_Profile_to_Analysis_Task_action.adoc
@@ -7,17 +7,17 @@ https://access.redhat.com/documentation/en-US/CloudForms/3.2/html/Settings_and_O
 Management Engine Settings and Operations Guide] for information on how
 to create analysis profiles.
 
-. Navigate to ControlExplorer.
+. Navigate to `Control` -> `Explorer`.
 
-. Click the Actions accordion, then click image:../images/1847.png[image]
-(Configuration), image:../images/1848.png[image] (Add a new Action).
+. Click the `Actions` accordion, then click image:../images/1847.png[image]
+(`Configuration`), image:../images/1848.png[image] (`Add a new Action`).
 
-. Type in a Description for the Action Type.
+. Type in a `Description` for the `Action Type`.
 +
 image:../images/1905.png[image]
 
-. Select Assign Profile to Analysis Task from Action Type.
+. Select `Assign Profile to Analysis Task` from `Action Type`.
 
-. Select a profile from the Analysis profiles.
+. Select a profile from the `Analysis profiles`.
 
-. Click Add.
+. Click `Add`.
