--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_create_an_e-mail_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_create_an_e-mail_Action.adoc
@@ -6,19 +6,19 @@ email. For further information regarding SMTP, see
 https://access.redhat.com/documentation/en-US/CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms
 Management Engine Settings and Operations Guide].
 
-. Navigate to ControlExplorer.
+. Navigate to `Control` -> `Explorer`.
 
-. Click the Actions accordion, then click image:../images/1847.png[image]
-(Configuration), image:../images/1848.png[image] (Add a new Action).
+. Click the `Actions` accordion, then click image:../images/1847.png[image]
+(`Configuration`), image:../images/1848.png[image] (`Add a new Action`).
 
-. Type in a Description for the action.
+. Type in a `Description` for the action.
 +
 image:../images/1922.png[image]
 
-. Select Send an E-mail from Action Type.
+. Select `Send an E-mail` from `Action Type`.
 
-. Type in a From E-mail Address and To E-mail Address.
+. Type in a `From E-mail Address` and `To E-mail Address`.
 +
 image:../images/1921.png[image]
 
-. Click Add.
+. Click `Add`.
