--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_delete_snapshots_by_age.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_delete_snapshots_by_age.adoc
@@ -1,18 +1,18 @@
 ==== Deleting Snapshots by Age
 
-. Navigate to ControlExplorer.
+. Navigate to `Control` -> `Explorer`.
 
-. Click the Actions accordion, then click image:../images/1847.png[image]
-(Configuration), image:../images/1848.png[image] (Add a new Action).
+. Click the `Actions` accordion, then click image:../images/1847.png[image]
+(`Configuration`), image:../images/1848.png[image] (`Add a new Action`).
 
-. Type in a Description for the action.
+. Type in a `Description` for the action.
 +
 image:../images/1909.png[image]
 
-. Select Delete Snapshots by Age from Action Type.
+. Select `Delete Snapshots by Age` from `Action Type`.
 
 . Select the age of snapshots to delete.
 +
 image:../images/1910.png[image]
 
-. Click Add.
+. Click `Add`.
