--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_disable_a_Policy.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_disable_a_Policy.adoc
@@ -4,14 +4,14 @@ You can disable one policy in a profile without removing it from the
 policy, perhaps for trouble shooting purposes or because the policy is
 not required temporarily.
 
-. Navigate to ControlExplorer.
+. Navigate to `Control` -> `Explorer`.
 
-. Click the Policies accordion, then navigate to the policy that you need
+. Click the `Policies` accordion, then navigate to the policy that you need
 to disable or navigate to the policy from the policy profile.
 
-. Click image:../images/1847.png[image] (Configuration),
-image:../images/1851.png[image] (Edit Basic Info, Scope, Notes).
+. Click image:../images/1847.png[image] (`Configuration`),
+image:../images/1851.png[image] (`Edit Basic Info, Scope, Notes`).
 
-. Uncheck Active.
+. Uncheck `Active`.
 
-. Click Save.
+. Click `Save`.
