--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_remove_Policy_Profiles_from_a_Cluster.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_remove_Policy_Profiles_from_a_Cluster.adoc
@@ -1,15 +1,15 @@
 ==== Removing Policy Profiles from a Cluster
 
-. Navigate to InfrastructureClusters, check the clusters you need to
+. Navigate to `Infrastructure` -> `Clusters`, check the clusters you need to
 remove the policy profiles from.
 
-. Click image:../images/1941.png[image] (Policy), and then click
-image:../images/1952.png[image](Manage Policies).
+. Click image:../images/1941.png[image] (`Policy`), and then click
+image:../images/1952.png[image](`Manage Policies`).
 
-. From the Select Policy Profiles area, you can click on the triangle next
+. From the `Select Policy Profiles` area, you can click on the triangle next
 to a desired policy profile to expand it and see its member policies.
 
 . Uncheck the policy profiles you need to remove. It turns blue to show
 that its assignment state has changed.
 
-. Click Save.
+. Click `Save`.
