--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_remove_Policy_Profiles_from_a_Host.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_remove_Policy_Profiles_from_a_Host.adoc
@@ -1,12 +1,12 @@
 ==== Removing Policy Profiles from a Host
 
-. Navigate to InfrastructureHosts, check the hosts you need to remove the
+. Navigate to `Infrastructure` -> `Hosts`, check the hosts you need to remove the
 policy profiles from.
 
-. Click image:../images/1941.png[image] (Policy), and then click
-image:../images/1952.png[image](Manage Policies).
+. Click image:../images/1941.png[image] (`Policy`), and then click
+image:../images/1952.png[image](`Manage Policies`).
 
 . Uncheck the policy profiles you need to remove. It turns blue to show
 that its assignment state has changed.
 
-. Click Save.
+. Click `Save`.
