--- a/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_view_Policy_Simulation_RSOP.adoc
+++ b/doc-Defining_Policies_and_Profiles/asciidoc/topics/To_view_Policy_Simulation_RSOP.adoc
@@ -5,16 +5,16 @@ the resolution of all policies based on which Events occur. Based on the
 result, you can adjust your Policies. To view RSOP, go to the control
 area in the CloudForms Management Engine console.
 
-. Navigate to ControlSimulation.
+. Navigate to `Control` -> `Simulation`.
 
-. From the Event Selection area, select a type of event, and then the
+. From the `Event Selection` area, select a type of event, and then the
 specific event you need the result for.
 +
 image:../images/1963.png[image]
 
-. From the VM Selection area, select the virtual machine from a provider,
+. From the `VM Selection` area, select the virtual machine from a provider,
 cluster, host, or a single virtual machine.
 +
 image:../images/1962.png[image]
 
-. Click Submit.
+. Click `Submit`.
