Minor edits made during peer review.

--- a/doc-Defining_Policies_and_Profiles/chap_policies.adoc
+++ b/doc-Defining_Policies_and_Profiles/chap_policies.adoc
@@ -70,12 +70,11 @@ The compliance check runs all compliance policies that are assigned to
 the host or virtual machine. If the item fails any of the checks, it is
 marked as non-compliant in the item's summary screen.
 
-_____________________________________________________________________________________________________
-*Note*
-
+[NOTE]
+======
 To schedule, you must have `EvmRole-administrator` access to the
 CloudForms Management Engine server.
-_____________________________________________________________________________________________________
+======
 
 include::topics/To_schedule_a_Compliance_check.adoc[]
 
