--- a/doc-Defining_Policies_and_Profiles/topics/To_assign_an_Action_to_an_Event.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_assign_an_Action_to_an_Event.adoc
@@ -20,16 +20,16 @@ Policy.
 +
 image:../images/1882.png[image]
 +
-_______________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________
-*Note*
 
+[NOTE]
+======
 Each selected action can be executed synchronously or asynchronously;
 synchronous actions will not start until the previous synchronous action
 is completed, and asynchronous action allows the next action to start
 whether or not the first action has completed. Also, at least one
 CloudForms Management Engine server in the CloudForms Management Engine
 zone must have the notifier server role enabled for the trap to be sent.
-_______________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________
+======
 
 +
 . Click the add button ( image:../images/1876.png[image]), then:
