--- a/doc-Defining_Policies_and_Profiles/topics/To_schedule_a_Compliance_check.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_schedule_a_Compliance_check.adoc
@@ -24,16 +24,16 @@ Selection` where you can choose to analyze all hosts, all hosts for a
 specific provider, all hosts for a cluster, a single host, or you can
 select hosts using a global filter.
 +
-_____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________
-*Note*
 
+[NOTE]
+======
 You can only schedule a host analysis for connected virtual machines,
 not repository virtual machines that were discovered through that host.
 Since repository virtual machines do not retain a relationship with the
 host that discovered them, there is no current way to scan them through
 the scheduling feature. The host is shown because it may have connected
 virtual machines in the future when the schedule is set to run.
-_____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________
+======
 
 . In the `Timer` area, click the `Run` dropdown to specify how often you want the analysis to run. Your options after that depend on which run option you choose.
 +
