--- a/doc-Defining_Policies_and_Profiles/topics/To_create_a_Control_Policy.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_a_Control_Policy.adoc
@@ -17,7 +17,7 @@ Also, a description of all events is provided in events.
 
 . Click the `Policies` accordion, and select `Control Policies`.
 
-. Select either `Host Control Policie`s or `VM Control Policies`.
+. Select either `Host Control Policies` or `VM Control Policies`.
 
 . Click image:../images/1847.png[image] (`Configuration`),
 image:../images/1848.png[image] (`Add New Host/VM Control Policy`).
