Made minor edits to the OpenShift guide during peer review.

--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Creating_OpenShift_Deployment_Service.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Creating_OpenShift_Deployment_Service.adoc
@@ -18,15 +18,15 @@ image:6234.png[]
 . Enter a name and description for the bundle.
 image:6235.png[]
 . Select +Display in Catalog+.
-. Select your new catalog from the +Catalog+ list.
-. Select +OpenShift Enterprise Installer+ from the +Dialog+ list.
-. Set the +Provisioning Entry Point+ to +/RedHat/Portfolio/OpenShift/Installer/ServiceProvision_Template/oseINSTALLER+.
-. Leave +Retirement Entry Point+ blank.
+.. Select your new catalog from the +Catalog+ list.
+.. Select +OpenShift Enterprise Installer+ from the +Dialog+ list.
+.. Set the +Provisioning Entry Point+ to +/RedHat/Portfolio/OpenShift/Installer/ServiceProvision_Template/oseINSTALLER+.
+.. Leave +Retirement Entry Point+ blank.
 image:6236.png[]
 . Select the +Details+ tab. If desired, use HTML to enter details for the consumer to view in the catalog.
 . Select the +Resources+ tab. Use the +Add a Resource+ list to add the required service items.
 image:6237.png[]
-. When you add a service item, it appears in +Selected Resources+.
+When you add a service item, it appears in +Selected Resources+.
 image:6238.png[]
 . Click +Add+.
 
