--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Deploying_OpenShift_Enterprise_Service.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Deploying_OpenShift_Enterprise_Service.adoc
@@ -10,15 +10,27 @@ image:6239.png[]
 . Enter the basic details for the service as required.
 image:6240.png[]
 . Select the +Depot+ tab to configure the depot type.
++
+--
 *None*
+
 A local repository as configured in the destination virtual machine’s +.repo+ files.
+
 *RHSM/RHN*
+
 Use either Red Hat Subscription Manager or Red Hat Network. Requires an internet connection.
-* Username: Enter your RHSM or RHN Username.
-* Password: Enter your RHSM or RHN Password.
+
+* +Username+: Enter your RHSM or RHN Username.
+
+* +Password+: Enter your RHSM or RHN Password.
+
 *YUM*
+
 Manually provide a URL to the YUM repository.
-* YUM URL: A URL for a YUM repository containing all the required packages for an OpenShift Enterprise install.
+
+* +YUM URL+: A URL for a YUM repository containing all the required packages for an OpenShift Enterprise install.
+--
++
 image:6241.png[]
 . Click +Submit+ to order the service and add it to the queue.
 image:6242.png[]
