--- a/doc-Integration_with_AWS_CloudFormation_and_OpenStack_Heat/CloudFormation_Provisioning_via_Services.adoc
+++ b/doc-Integration_with_AWS_CloudFormation_and_OpenStack_Heat/CloudFormation_Provisioning_via_Services.adoc
@@ -33,7 +33,7 @@ Use this procedure to add a new service catalog item using the dashboard UI.
 
 [arabic]
 . Navigate to Services → Catalog and select Catalog Items in the accordion menu.
-. Click images:1847.png[Configuration] Configuration, then click image:1848.png[Green_Plus_Sign] Add a New Catalog Item. The Adding a new Service Catalog Item window is displayed.
+. Click image:1847.png[Configuration] Configuration, then click image:1848.png[Green_Plus_Sign] Add a New Catalog Item. The Adding a new Service Catalog Item window is displayed.
 image:7146.png[Adding_a_new_Service_Catalog_Item]
 . Choose Orchestration from Catalog Item Type.
 . In Basic Info, add Name and Description. Select the Display in Catalog box.
