minor updates to table formatting.

--- a/doc-Integration_with_ServiceNow/Overview.adoc
+++ b/doc-Integration_with_ServiceNow/Overview.adoc
@@ -10,27 +10,27 @@ The following new namespace and class delivers support for the management of Ser
 
 You can manage records in the CMDB_CI_SERVER table, including create, update, and/or delete. The following methods are included:
 
-==== CMDB_CI_SERVER 
-[width="50%"]
+[width="50%",cols="2,5",options="header"]
 |=========================================================
-|Method |Action |
+|Method |Action
 
-|create |Create record in specified ServiceNow table. |
+|create |Create record in specified ServiceNow table.
 
-|delete |Delete record in specified ServiceNow table. |
+|delete |Delete record in specified ServiceNow table.
 
-|get |Get record from specified ServiceNow table and list its attributes. |
+|get |Get record from specified ServiceNow table and list its attributes.
 
-|get_all |Get all records in ServiceNow and list attributes. |
+|get_all |Get all records in ServiceNow and list attributes.
 
-|update |Get specified record, update required attributes and post updated record. |
+|update |Get specified record, update required attributes and post updated record.
 
-|update_patch |Post required attributes to specified record. |
+|update_patch |Post required attributes to specified record.
+|=========================================================
 
-+
-[Note]
+
+[NOTE]
 =======
 Configuration item (CI) and record are used interchangeably and refer to items in a ServiceNow database table.
 =======
-+
+
 
