--- a/doc-Integration_with_ServiceNow/Managing_Record_Attributes.adoc
+++ b/doc-Integration_with_ServiceNow/Managing_Record_Attributes.adoc
@@ -5,35 +5,37 @@ You can specify any attribute via the +URI+ or +CMDB+ class instance. If neither
 
 The attributes can be reduced or extended as required by amending the Ruby methods.
 
-+
-[Note]
-=======
+.NOTE
+
 Some attributes are not free-text (variable) fields, that is, they must be specific values. For example, Vendor value must already exist in the ServiceNow Vendor table beforehand.
-=======
 
 === Create and Update (_patch) Record
 You can use the following attributes when creating and/or updating a record.
 
-==== Attribute
-[width="50%"]
+[width="50%",options="header",cols="2,3"]
 |=========================================================
-|Attribute |Value |
+|Attribute |Value
 
-|virtual |Boolean true or false, set to true. |
+|virtual |Boolean true or false, set to true.
 
-|name VM’s |Virtual Infrastructure name. |
+|name VM’s |Virtual Infrastructure name.
 
-|short_description |CloudForms VM GUID. |
+|short_description |CloudForms VM GUID.
 
-|host_name |VM’s Operating System hostname. |
+|host_name |VM’s Operating System hostname.
 
-|cpu_count |VM’s CPU count. |
+|cpu_count |VM’s CPU count.
 
-|ram |VM’s memory. |
+|ram |VM’s memory.
 
-|vendor |VM’s hardware vendor (provider). |
+|vendor |VM’s hardware vendor (provider).
 
-|sys_id footnoteref:[a,  sys_id attribute is not required during create. Its value is returned from create request and the CloudForms object custom attribute servicenow_sys_id is created and updated.] |ServiceNow record unique system ID. |=================================================== |
+|sys_id 
+footnote:[a,sys_id attribute is not required during create. Its value is returned from create request and the CloudForms object custom attribute `servicenow_sys_id` is created and updated.] |ServiceNow record unique system ID. 
+footnoteref:[a]
+|=========================================================
+
+
 
 === Get and Delete Record
 
