--- a/doc-Integration_with_AWS_CloudFormation_and_OpenStack_Heat/Cloud_Orchestration.adoc
+++ b/doc-Integration_with_AWS_CloudFormation_and_OpenStack_Heat/Cloud_Orchestration.adoc
@@ -9,42 +9,48 @@ Templates use a human-readable syntax and can be defined in text files (thereby 
 Use this procedure to add new orchestration templates using the dashboard UI.
 
 [arabic]
-. Navigate to Services → Catalog and select Orchestration Templates in the accordion menu.
-. Click image:1847.png[Configuration] Configuration, then click image:1848.png[Green_Plus_Sign] Create a new Orchestration Template. The Adding a new Orchestration Template window is displayed.
+. Navigate to +Services+ → +Catalog+ and select +Orchestration Templates+ in the accordion menu.
+. Click image:1847.png[Configuration] +Configuration+, then click image:1848.png[Green_Plus_Sign] +Create a new Orchestration Template+. The +Adding a new Orchestration Template+ window is displayed.
 image:7148.png[Adding_a_new_Orchestration_Template]
-. In Name, enter a name for the new template.
-. In Description, enter a description for the template. Select Amazon CloudFormation or OpenStack Heat from the Template Type list. The default is Amazon CloudFormation.
-. You can select the Draft box to create a draft template.
-. Define your new template following the specification structure of the selected Template Type.
-. Click Add.
+. In +Name+, enter a name for the new template.
+. In +Description+, enter a description for the template. Select Amazon CloudFormation or OpenStack Heat from the +Template Type+ list. The default is Amazon CloudFormation.
+. You can select the +Draft box+ to create a draft template.
+. Define your new template following the specification structure of the selected +Template Type+.
+. Click +Add+.
 
 === Editing Orchestration Templates
 
 Use this procedure to edit orchestration templates using the dashboard UI.
 [arabic]
-. Navigate to Services → Catalog and select Orchestration Templates in the accordion menu.
-. Select the orchestration template you want to edit from the All Orchestration Templates list.
-. Click image:1847.png[Configuration] Configuration, then click image:1851.png[Edit_Sign] Edit selected Orchestration Template. The Edit selected Orchestration Template window is displayed.
-. You can only edit the Name and Description of a read-only template as there can be stacks associated with the selected template. For templates that are not read-only, you can edit all content in the template as required.
-. Click Save.
+. Navigate to +Services+ → +Catalog+ and select +Orchestration Templates+ in the accordion menu.
+. Select the orchestration template you want to edit from the +All Orchestration Templates+ list.
+. Click image:1847.png[Configuration] +Configuration+, then click image:1851.png[Edit_Sign] +Edit selected Orchestration Template+. The +Edit selected Orchestration Template+ window is displayed.
+. You can only edit the +Name+ and +Description+ of a read-only template as there can be stacks associated with the selected template. For templates that are not read-only, you can edit all content in the template as required.
+. Click +Save+.
 
 === Copying Orchestration Templates
 
 Use this procedure to copy an orchestration template to create a new template.
 [arabic]
-. Navigate to Services → Catalog and select Orchestration Templates in the accordion menu.
-. Click image:1847.png[Configuration] Configuration, then click image:1859.png[Copy] Copy selected Orchestration Template. The Copy selected Orchestration Template window is displayed.
-. You can copy the selected template to create a new template, and include the changes as required. Note that in order to create the new template its content must be unique.
-. Click Save.
+. Navigate to +Services+ → +Catalog+ and select +Orchestration Templates+ in the accordion menu.
+. Click image:1847.png[Configuration] +Configuration+, then click image:1859.png[Copy] +Copy selected Orchestration Template+. The +Copy selected Orchestration Template+ window is displayed.
+. You can copy the selected template to create a new template, and include the changes as required. 
++
+[Note]
+============
+In order to create the new template its content must be unique.
+============
++
+. Click +Save+.
 
 === Deleting Orchestration Templates
 
 Use this procedure to delete orchestration templates using the dashboard UI.
 [arabic]
-. Navigate to Services → Catalog and select Orchestration Templates in the accordion menu.
-. Select the orchestration template you want to delete from the All Orchestration Templates list.
-. Click image:1848.png[Configuration] Configuration, then click image:1861.png[Delete] Remove selected Orchestration Template.
+. Navigate to +Services+ → +Catalog+ and select +Orchestration Templates+ in the accordion menu.
+. Select the orchestration template you want to delete from the +All Orchestration Templates+ list.
+. Click image:1848.png[Configuration] +Configuration+, then click image:1861.png[Delete] +Remove selected Orchestration Template+.
 . A warning window to confirm the permanent removal of the selected item from the VMDB appears.
-. Click OK.
+. Click +OK+.
 
 This instantly deletes the selected orchestration template. Note that only non read-only templates can be removed.
