--- a/doc-Integration_with_AWS_CloudFormation_and_OpenStack_Heat/Integration_with_AWS_CloudFormation_and_OpenStack_Heat.adoc
+++ b/doc-Integration_with_AWS_CloudFormation_and_OpenStack_Heat/Integration_with_AWS_CloudFormation_and_OpenStack_Heat.adoc
@@ -3,7 +3,7 @@
 
 Red Hat CloudForms' integration with AWS CloudFormation and OpenStack Heat provides an ability to:
 
-* Inventory all AWS CloudFormation and OpenStack Heat stacks and elements into CFME's VMDB.
+* Inventory all +AWS CloudFormation+ and +OpenStack Heat+ stacks and elements into +CFME's VMDB+.
 * Model the relationships of instances to their stacks, inclusive of the UI. Example, selecting an instance within a region that is within a stack, the UI shows this on the standard instance view.
 * Model the stack and its elements in the UI.
 
