--- a/doc-Integration_with_AWS_CloudFormation_and_OpenStack_Heat/Introduction.adoc
+++ b/doc-Integration_with_AWS_CloudFormation_and_OpenStack_Heat/Introduction.adoc
@@ -1,5 +1,5 @@
-﻿[[Introduction]]
-= Introduction
+[[Introduction]]
+== Introduction
 
 AWS CloudFormation enables users to orchestrate the instantiation of multi-instance services via templates. You can use CloudFormation's sample templates or create your own templates to describe the AWS resources, and any associated dependencies or runtime parameters, required to run your applications. Similarly, you can configure and monitor cloud resources in Red Hat Enterprise Linux OpenStack Platform using the Orchestration service. The Orchestration service provides a framework through which you can define an instance's resource parameters (for example, floating IPs, volumes, or security groups) and properties (for example, key pairs, image to be used, or flavor) using OpenStack Heat templates.
 
