--- a/doc-Integration_with_Red_Hat_Satellite/Triggering_a_Refresh_of_a_Satellite_6_Provider.adoc
+++ b/doc-Integration_with_Red_Hat_Satellite/Triggering_a_Refresh_of_a_Satellite_6_Provider.adoc
@@ -6,9 +6,9 @@ Your Satellite 6 provider can still create new hosts independently of Red Hat Cl
 === Triggering a Refresh of a Satellite 6 Provider
 
 [arabic]
-. If you have not navigated elsewhere, the Infrastructure → Configuration Management screen displays your Red Hat Satellite 6 server.
-. Select your Red hat Satellite 6 provider using the checkbox and click Configuration → Refresh Relationships and Power States. This triggers the refresh.
-. When the refresh complete, click on the Red Hat Satellite 6 provider to check the updated contents.
+. If you have not navigated elsewhere, the +Infrastructure+ → +Configuration Management+ screen displays your Red Hat Satellite 6 server.
+. Select your Red hat Satellite 6 provider using the checkbox and click +Configuration+ → +Refresh Relationships+ and +Power States+. This triggers the refresh.
+. When the refresh complete, click on the +Red Hat Satellite 6 provider+ to check the updated contents.
 
 The page now displays an updated list of host groups in the provider.
 
