--- a/doc-Integration_with_ServiceNow/managing_record_attributes.adoc
+++ b/doc-Integration_with_ServiceNow/managing_record_attributes.adoc
@@ -5,17 +5,17 @@ You can specify any attribute via the +URI+ or +CMDB+ class instance. If neither
 
 The attributes can be reduced or extended as required by amending the Ruby methods.
 
-+
-[Note]
-=======
+[[Note]]
+.Note
+-----------
 Some attributes are not free-text (variable) fields, that is, they must be specific values. For example, Vendor value must already exist in the ServiceNow Vendor table beforehand.
-=======
-+
+-----------
+
 === Create and Update (_patch) Record
 You can use the following attributes when creating and/or updating a record.
 
 ==== Attribute
-[width="50%"]
+[width="40%"]
 |=========================================================
 |Attribute |Value
 
