--- a/doc-Release_Notes/master.adoc
+++ b/doc-Release_Notes/master.adoc
@@ -15,3 +15,5 @@ include::deprecated_technology.adoc[]
 include::register_cfme.adoc[]
 include::ui_locale.adoc[]
 include::enabling_public_amis.adoc[]
+include::changes_in_the_core_set_of_ruby_gems.adoc[]
+
