BZ1270655 - Formatting updates to procedures, notes and missing tags.

--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/chap_automation_model.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/chap_automation_model.adoc
@@ -34,13 +34,13 @@ include::topics/Copying_a_Class_or_Instance.adoc[]
 
 === Relationships
 
-Relationships are used to connect to other instances in the Automation
-Datastore. Relationships are formed using URI syntax. The following can
+Relationships are used to connect to other instances in the `Automation
+Datastore`. Relationships are formed using URI syntax. The following can
 also be passed through a relationship:
 
-* Use # to set the message to send to the item in the relationship.
-* To pass an input to the method use ? followed by the item to pass.
-* If you want to use a substitution, the syntax is $\{} with the
+* Use `#` to set the message to send to the item in the relationship.
+* To pass an input to the method use `?` followed by the item to pass.
+* If you want to use a substitution, the syntax is `$\{}` with the
 substitution located between the brackets.
 
 [cols=",",options="header",]
