--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Automate_Model2.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Automate_Model2.adoc
@@ -52,8 +52,7 @@ systems.
 You can copy classes and instances from locked Domains into your own
 custom domains.
 
-______________________________________________________________________________________________________________________________________________________________________________________________________________________________
-*Note*
+.NOTE
 
 Red Hat does not recommend changing any of the existing classes or
 instances shipped with the product as this may hinder the operation of
@@ -61,5 +60,4 @@ the CloudForms Management Engine. You can link to these methods using
 relationships.
 
 To reset the Automate model to default settings, navigate to
-AutomateImport/Export and click the Reset option.
-______________________________________________________________________________________________________________________________________________________________________________________________________________________________
+*Automate* -> *Import/Export* and click the *Reset* option.
