--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/CloudForms_Management_Engine_Methods_for_use_in_Ruby_Scripts1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/CloudForms_Management_Engine_Methods_for_use_in_Ruby_Scripts1.adoc
@@ -1,7 +1,7 @@
 === CloudForms Management Engine Methods for use in Ruby Scripts
 
 To use one of these in one of your own Ruby methods, use the syntax of
-`vm.`. For example, to reboot the guest operating system, use
+`vm.method`. For example, to reboot the guest operating system, use
 `vm.rebootGuest`.
 
 [cols=",",options="header",]
