--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Editing_a_Domain.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Editing_a_Domain.adoc
@@ -1,15 +1,15 @@
 === Editing a Domain
 
-Navigate to AutomateExplorer. The default view is the Datastore.
+. Navigate to `Automate` -> `Explorer`. The default view is the Datastore.
 
-Select the Domain you want to edit.
+. Select the Domain you want to edit.
 
-Click image:../images/1847.png[image] (Configuration), then
-image:../images/1851.png[image] (Edit Selected Domain).
+. Click image:../images/1847.png[image] (`Configuration`), then
+image:../images/1851.png[image] (`Edit Selected Domain`).
 
-Make the required edits.
+. Make the required edits.
 
-Click Save.
+. Click `Save`.
 
 _Result:_. +
 You have edited the selected domain.
