--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Phase_2_Request_Approval.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Phase_2_Request_Approval.adoc
@@ -32,6 +32,6 @@ or Infrastructure namespace of your domain.
 
 |If a Request Approval requires manual approval, how does an Approver
 approve the request? |Log into CloudForms Management Engine as an
-approver/admin and Navigate to Virtual MachinesRequests and then click
+approver/admin and Navigate to *Virtual Machines* -> *Requests* and then click
 on the request.
 |=======================================================================
