--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Phase_3_Quota_Validation2.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Phase_3_Quota_Validation2.adoc
@@ -10,7 +10,7 @@ instance of either the Cloud or Infrastructure namespace in your domain.
 
 |Where in CloudForms Management Engine can I set individual and group
 quota thresholds? |Tags can be assigned to groups or users by navigating
-to ConfigurationAccess Control. The following are valid tags that can be
+to *Configuration* -> *Access Control*. The following are valid tags that can be
 assigned to group or individual users: [quota_max_cpu, quota_max_memory,
 quota_max_storage].
 
