--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Phase_4_Provisioning1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Phase_4_Provisioning1.adoc
@@ -1,9 +1,12 @@
 === Phase 4: Provisioning
 
-image:../images/2377.png["Target Type: Cloning a Template to a Virtual
-Machine"]
+[[Target_Type:_Cloning_a_Template_to_a_Virtual_Machine]]
+.Target Type: Cloning a Template to a Virtual Machine
+image::../images/2377.png["Target Type: Cloning a Template to a Virtual Machine"]
 
-image:../images/2378.png["Target Type: Clone to Template"]
+[[Target_Type:_Clone_to_Template]]
+.Target Type: Clone to Template
+image::../images/2378.png["Target Type: Clone to Template"]
 
 [cols=",",options="header",]
 |=======================================================================
