--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_create_a_class1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_create_a_class1.adoc
@@ -1,27 +1,24 @@
 === Creating a Class
 
-Navigate to AutomateExplorer, navigate to the namespace you want to add
-a class to.
+. Navigate to `Automate` -> `Explorer`, navigate to the namespace you want to add a class to.
 
-Click image:../images/1847.png[image] (Configuration), then
-image:../images/2365.png[image] (Add a new Class).
+. Click image:../images/1847.png[image] (`Configuration`), then
+image:../images/2365.png[image] (`Add a new Class`).
 
-Type in a unique Name and Description.
+. Type in a unique `Name` and `Description`.
 
-If you want to use the schema from a class that has already been
-created, select it from the Inherits From dropdown. If the class that
+. If you want to use the schema from a class that has already been
+created, select it from the `Inherits From` dropdown. If the class that
 the new class inherits from changes, the new class will also change.
 
-Click Add.
+. Click `Add`.
 
 _Result:_. +
 The new class is created and you can create a schema, add instances and
 methods.
 
-___________________________________________________________________________________________________________________________________________________________________
-*Note*
+.NOTE
 
 For each class, create a schema if you did not choose to inherit from an
 existing class. The schema can include attributes, methods, assertions,
 and relationships.
-___________________________________________________________________________________________________________________________________________________________________
