--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_create_a_custom_button1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_create_a_custom_button1.adoc
@@ -1,44 +1,35 @@
+[[create-a-custom-button]]
 === Creating a Custom Button
 
 This procedure shows you how to create a custom button.
 
-Navigate to AutomateCustomization.
+. Navigate to `Automate` -> `Customization`.
 
-Click the Buttons accordion.
+. Click the `Buttons` accordion.
 
-From the Object Types tree, select the type of object you want to create
-the button for.
+. From the `Object Types` tree, select the type of object you want to create the button for.
 
-Click Unassigned Buttons.
+. Click `Unassigned Buttons`.
 
-Click image:../images/1847.png[image](Configuration), then
-image:../images/1848.png[image] (Add a new Button).
+. Click image:../images/1847.png[image](`Configuration`), then
+image:../images/1848.png[image] (`Add a new Button`).
++
+.NOTE
+If image:../images/1848.png[image] (Add a new Button) is not available, that means you have not created a button group for that object. To continue, create a button group first. See <<create-custom-button-group>>
 
-____________________________________________________________________________________________________________________________________________________________________________________
-*Note*
+. In `Action`, type in a `Button Text` and `Button Hover Text`, and select the `Button Image` you want to use.
 
-If image:../images/1848.png[image] (Add a new Button) is not available,
-that means you have not created a button group for that object. To
-continue, create a button group first. See ?
-____________________________________________________________________________________________________________________________________________________________________________________
+. Select a `Dialog` if applicable.
 
-In Action, type in a Button Text and Button Hover Text, and select the
-Button Image you want to use.
+. In `Object Details`, select `Request` from the `/System/Process/` dropdown. By default, the message is `create`. Do not change it.
 
-Select a Dialog if applicable.
+. Type in a `Request` name for the `/System/Process/Request` instance.
 
-In Object Details, select Request from the /System/Process/ dropdown. By
-default, the message is `create`. Do not change it.
+. Type in the `Attribute/Value Pairs` fields if applicable.
 
-Type in a Request name for the `/System/Process/Request` instance.
+. Under `Visibility`, select which `Account Roles` you want to have access to this button.
 
-Type in the Attribute/Value Pairs fields if applicable.
-
-Under Visibility, select which Account Roles you want to have access to
-this button.
-
-Click Add when you have confirmed that the button accomplishes the task
-you want.
+. Click `Add` when you have confirmed that the button accomplishes the task you want.
 
 _Result:_. +
 The button will show in the object type you added the button to.
