--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_create_a_schema_for_a_class1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_create_a_schema_for_a_class1.adoc
@@ -2,55 +2,49 @@
 
 This procedure shows you how to create a schema.
 
-Navigate to AutomateExplorer, and click the class you want to define a
-schema for.
+. Navigate to `Automate` -> `Explorer`, and click the class you want to define a schema for.
 
-Click on the Schema tab.
+. Click on the `Schema` tab.
 
-Click image:../images/1847.png[image] (Configuration), then
-image:../images/1851.png[image] (Edit selected Schema).
+. Click image:../images/1847.png[image] (`Configuration`), then
+image:../images/1851.png[image] (`Edit selected Schema`).
 
-Click image:../images/2366.png[image] (Click to add a new field) to create
-a new field.
+. Click image:../images/2366.png[image] (`Click to add a new field`) to create a new field.
 
-Type in a Name for the new field.
+. Type in a `Name` for the new field.
 
-From Type, select Assertion, Attribute, Method, Relationship, or State.
+. From `Type`, select `Assertion`, `Attribute`, `Method`, `Relationship`, or `State`.
 
-If applicable, select a Data Type and set a Default Value.
+. If applicable, select a `Data Type` and set a `Default Value`.
 
-Type in a user friendly Display Name and Description.
+. Type in a user friendly `Display Name` and `Description`.
 
-Check Sub to enable the substitution syntax of `${}`. Uncheck it if you
+. Check `Sub` to enable the substitution syntax of `${}`. Uncheck it if you
 want to use that syntax as a regular string.
 
-Fill in Collect and Message as required. Collect is used to rollup
+. Fill in `Collect` and `Message` as required. `Collect` is used to rollup
 values from resolved relationships. For example, a relationship can
-resolve to a large object tree. Use collect to specify how to pull out
+resolve to a large object tree. Use `collect` to specify how to pull out
 data from those child objects into the current object. If you give
-collect a name value, it will store the method result in an attribute of
+`collect` a name value, it will store the method result in an attribute of
 the current object with that name.
 
-On Entry, On Exit, On Error, Max Retries, and Max Time are fields used
-mostly for state machines. Leave blank if not applicable. For more
-information, see
+. `On Entry`, `On Exit`, `On Error`, `Max Retries`, and `Max Time` are fields used mostly for state machines. Leave blank if not applicable. For more information, see
 https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/3.2/html/Lifecycle_and_Automation_Guide/sect-State_Machines.html[State
 Machines] in the Lifecycle and Automation Guide.
 
-Click image:../images/1863.png[image] (Add this entry) to confirm the
+. Click image:../images/1863.png[image] (`Add this entry`) to confirm the
 fields values.
 
-For each new field, repeat steps 4 through 10.
+. For each new field, repeat steps 4 through 10.
 
-When you have created all of the fields, click Save.
+. When you have created all of the fields, click `Save`.
 
 _Result:_. +
 The class schema is created, and you can now add instances to it.
 
-__________________________________________________________________________________________________________________________________________________________________________________________
-*Note*
+.NOTE
 
 You may need to edit a class schema to reorder, add, edit, or remove a
 field. Classes define the order in which fields are processed and you
 may need to process some items before others.
-__________________________________________________________________________________________________________________________________________________________________________________________
