--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_import_Datastore_classes1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_import_Datastore_classes1.adoc
@@ -2,13 +2,13 @@
 
 This procedure shows you how to import datastore classes.
 
-Navigate to AutomateImport/Export.
+. Navigate to `Automate` -> `Import/Export`.
 
-Export the datastore so that you have a backup.
+. Export the datastore so that you have a backup.
 
-Click Browse to navigate to the location of the file to import.
+. Click `Browse` to navigate to the location of the file to import.
 
-Click Upload.
+. Click `Upload`.
 
 _Result:_. +
 The datastore is imported from the YAML file.
