--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Virtual_Machine_Properties1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Virtual_Machine_Properties1.adoc
@@ -1,7 +1,6 @@
 === Virtual Machine Properties
 
-When using these items in a method, prefix them with `vm.`. For example:
-`vm.storage_id.`
+When using these items in a method, prefix them with `vm.`. For example: `vm.storage_id.`
 
 .Virtual Machine Properties
 [cols=",",options="header",]
