--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Automate_Examples1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Automate_Examples1.adoc
@@ -2,13 +2,9 @@
 
 This chapter describes the ways to invoke an Automate workflow.
 Automation can be initiated through an alert, an event, a CloudForms
-Management Engine application, or a custom button. The same automation
-process can be re-used across more than one of these. For example, using
-automation to remove orphaned virtual machines and instances could be
-initiated by:
+Management Engine application, or a custom button. The same automation process can be re-used across more than one of these. For example, using automation to remove orphaned virtual machines and instances could be initiated by:
 
-* An administrator request from the CloudForms Management Engine console
-(from a custom button)
+* An administrator request from the CloudForms Management Engine console (from a custom button)
 * An alert indicating the datastore has less than 20% free-space
 * A virtual machine or instance unregistered event is detected
 
