--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Copying_a_Class_or_Instance.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Copying_a_Class_or_Instance.adoc
@@ -1,20 +1,18 @@
 === Copying a Class or Instance
 
-Navigate to AutomateExplorer. The default view is the Datastore.
+. Navigate to `Automate` -> `Explorer`. The default view is the Datastore.
 
-Navigate through the various Domains and Namespaces until you reach the
+. Navigate through the various Domains and Namespaces until you reach the
 desired class or instance to copy.
 
-Click image:../images/1847.png[image] (Configuration), then either (Copy
-this Class) or (Copy this Instance) depending on the object chosen.
+. Click image:../images/1847.png[image] (`Configuration`), then either (`Copy this Class`) or (`Copy this Instance`) depending on the object chosen.
 
-Choose the target Domain in the To Domain drop-down menu.
+. Choose the target Domain in the `To Domain` drop-down menu.
 
-The object retains the same path as the From Domain and overrides the
-class in From Domain if the To Domain has a high priority. You can also
-untick the Copy to same path option to specify a new Namespace.
+. The object retains the same path as the `From Domain` and overrides the
+class in `From Domain` if the `To Domain` has a high priority. You can also untick the `Copy to same path` option to specify a new Namespace.
 
-Click Add.
+. Click `Add`.
 
 _Result:_. +
 The class or instance has been copied to your custom Domain.
