--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Creating_a_Domain.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Creating_a_Domain.adoc
@@ -1,13 +1,13 @@
 === Creating a Domain
 
-Navigate to AutomateExplorer. The default view is the Datastore.
+. Navigate to `Automate` -> `Explorer`. The default view is the Datastore.
 
-Click image:../images/1847.png[image] (Configuration), then
-image:../images/2365.png[image] (Add a New Domain).
+. Click image:../images/1847.png[image] (`Configuration`), then
+image:../images/2365.png[image] (`Add a New Domain`).
 
-Type in a unique Name and Description. Choose if the Domain is Enabled.
+. Type in a unique `Name` and `Description`. Choose if the Domain is `Enabled`.
 
-Click Add.
+. Click `Add`.
 
 _Result:_. +
 The new domain is created.
