--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Creating_a_Namespace.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Creating_a_Namespace.adoc
@@ -1,16 +1,16 @@
 === Creating a Namespace
 
-Navigate to AutomateExplorer. The default view is the Datastore.
+. Navigate to `Automate` -> `Explorer`. The default view is the Datastore.
 
-Navigate through the various Domains and Namespaces until you reach the
+. Navigate through the various Domains and Namespaces until you reach the
 desired location for your new Namespace.
 
-Click image:../images/1847.png[image] (Configuration), then
-image:../images/2365.png[image] (Add a New Namespace).
+. Click image:../images/1847.png[image] (`Configuration`), then
+image:../images/2365.png[image] (`Add a New Namespace`).
 
-Type in a unique Name and Description.
+. Type in a unique `Name` and `Description`.
 
-Click Add.
+. Click `Add`.
 
 _Result:_. +
 The new Namespace is created.
