--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Deleting_a_Domain.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Deleting_a_Domain.adoc
@@ -1,15 +1,15 @@
 === Deleting a Domain
 
-Navigate to AutomateExplorer. The default view is the Datastore.
+. Navigate to `Automate` -> `Explorer`. The default view is the Datastore.
 
-Select the Domain that you want to delete.
+. Select the `Domain` that you want to delete.
 
-Click image:../images/1847.png[image] (Configuration), then
-image:../images/1861.png[image] (Remove This Domain).
+. Click image:../images/1847.png[image] (`Configuration`), then
+image:../images/1861.png[image] (`Remove This Domain`).
 
-A window to confirm the removal of Domain appears.
+. A window to confirm the removal of Domain appears.
 
-Click OK.
+. Click `OK`.
 
 _Result:_. +
 The selected Domain is deleted.
