--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_add_an_instance_to_a_class1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_add_an_instance_to_a_class1.adoc
@@ -2,18 +2,18 @@
 
 This procedure shows you how to create an instance.
 
-Navigate to AutomateExplorer.
+. Navigate to `Automate` -> `Explorer`.
 
-Click the class you want to define a schema for.
+. Click the class you want to define a schema for.
 
-Click the Instances tab.
+. Click the `Instances` tab.
 
-Click image:../images/1847.png[image] (Configuration), then
-image:../images/2361.png[image] (Add a new Instance).
+. Click image:../images/1847.png[image] (`Configuration`), then
+image:../images/2361.png[image] (`Add a new Instance`).
 
-In the Main Info area, type in a Name, Display Name and Description.
+. In the `Main Info` area, type in a `Name`, `Display Name` and `Description`.
 
-In the Fields area, type in an appropriate value for each field, leave
+. In the `Fields` area, type in an appropriate value for each field, leave
 the field blank if no value is required, or use the default value.
 
-Click Add.
+. Click `Add`.
