--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_create_a_custom_Automate_Action1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_create_a_custom_Automate_Action1.adoc
@@ -2,26 +2,26 @@
 
 This procedure shows you how to create a custom Automate action.
 
-Navigate to ControlExplorer accordion.
+. Navigate to `Control` -> `Explorer` accordion.
 
-Click the Actions accordion.
+. Click the `Actions` accordion.
 
-Click image:../images/1847.png[image](Configuration), then
-image:../images/1848.png[image] (Add a new Action).
+. Click image:../images/1847.png[image](`Configuration`), then
+image:../images/1848.png[image] (`Add a new Action`).
 
-Type in a Description for the Action.
+. Type in a `Description` for the Action.
 
-Select Invoke a Custom Automation from Action Type.
+. Select `Invoke a Custom Automation` from `Action Type`.
 
-In Custom Automation,
-
-* For Message, type `create`.
-* For Request, type in the name of the instance of the
+. In `Custom Automation`,
++
+* For `Message`, type `create`.
+* For `Request`, type in the name of the instance of the
 `/System/Process/Request Class` in the second.
 
-Type in the Attribute/Value Pairs fields if applicable.
+. Type in the `Attribute/Value Pairs` fields if applicable.
 
-Click Add.
+. Click `Add`.
 
 _Result:_. +
 The action is created and can be added to a policy.
