--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_create_a_method1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_create_a_method1.adoc
@@ -2,19 +2,17 @@
 
 This procedure shows you how to create a method.
 
-Navigate to AutomateExplorer, navigate to the class where you want to
-create a method.
+. Navigate to `Automate` -> `Explorer`, navigate to the class where you want to create a method.
 
-Click the Methods tab.
+. Click the `Methods` tab.
 
-Click image:../images/1847.png[image] (Configuration),
-image:../images/2360.png[image] (Add a New Method).
+. Click image:../images/1847.png[image] (`Configuration`),
+image:../images/2360.png[image] (`Add a New Method`).
 
-In the Main Info area, type in a Name and Display Name.
+. In the `Main Info` area, type in a `Name` and `Display Name`.
 
-For Location, select inline. Once selected, you will be presented with a
-Data area in which to write or copy the script.
+. For `Location`, select `inline`. Once selected, you will be presented with a `Data` area in which to write or copy the script.
 
-Click Validate to check the syntax.
+. Click `Validate` to check the syntax.
 
-Click Add.
+. Click `Add`.
