--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_delete_a_custom_button1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_delete_a_custom_button1.adoc
@@ -2,12 +2,10 @@
 
 This procedure shows you how to delete a custom button.
 
-Navigate to AutomateCustomizations, then select the Buttons accordion.
+. Navigate to `Automate` -> `Customization`, then select the `Buttons` accordion.
 
-From the Object Type tree in the accordion menu, select the type of
-object you want to remove the button from.
+. From the `Object Type` tree in the accordion menu, select the type of object you want to remove the button from.
 
-Click image:../images/1847.png[image] (Configuration). then click
-image:../images/2157.png[image] (Remove this button).
+. Click image:../images/1847.png[image] (`Configuration`). then click image:../images/2157.png[image] (`Remove this button`).
 
-Click OK to confirm that you want to delete this button.
+. Click `OK` to confirm that you want to delete this button.
