--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_edit_a_custom_button1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_edit_a_custom_button1.adoc
@@ -2,16 +2,15 @@
 
 This procedure shows you how to edit a custom button.
 
-Navigate to AutomateCustomization.
+. Navigate to `Automate` -> `Customization`.
 
-From the Object Types dropdown, select the type of object you want to
-edit the button for.
+. From the `Object Types` dropdown, select the type of object you want to edit the button for.
 
-Click the button you want to edit.
+. Click the button you want to edit.
 
-Click image:../images/1847.png[image](Configuration),
-image:../images/1851.png[image] (Edit this Button).
+. Click image:../images/1847.png[image](`Configuration`),
+image:../images/1851.png[image] (`Edit this Button`).
 
-Modify as required.
+. Modify as required.
 
-Click Save.
+. Click `Save`.
