--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_edit_a_field_in_a_schema1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_edit_a_field_in_a_schema1.adoc
@@ -2,21 +2,20 @@
 
 This procedure describes how to edit schema fields.
 
-Navigate to AutomateExplorer.
+. Navigate to `Automate` -> `Explorer`.
 
-Click the class you want to define a schema for.
+. Click the class you want to define a schema for.
 
-Click the Schema tab.
+. Click the `Schema` tab.
 
-Click image:../images/1847.png[image] (Configuration), then
-image:../images/1851.png[image] (Edit selected Schema).
+. Click image:../images/1847.png[image] (`Configuration`), then
+image:../images/1851.png[image] (`Edit selected Schema`).
 
-Make required changes to any of the definitions for the field.
+. Make required changes to any of the definitions for the field.
 
-To remove a field, click image:../images/2367.png[image] (Click to delete
-this field from the schema).
+. To remove a field, click image:../images/2367.png[image] (`Click to delete this field from the schema`).
 
-Click Save when you are finished editing the schema.
+. Click `Save` when you are finished editing the schema.
 
 _Result:_. +
 Once the schema is created, you can add instances and methods to the
