--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_export_all_Classes_classes1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_export_all_Classes_classes1.adoc
@@ -2,12 +2,11 @@
 
 This procedure shows you how export datastore classes as an XML file.
 
-Navigate to AutomateImport/Export.
+. Navigate to `Automate` -> `Import/Export`.
 
-Click image:../images/2371.png[image] (Export all Datastore classes and
-instances to a file).
+. Click image:../images/2371.png[image] (`Export all Datastore classes and instances to a file`).
 
-Follow your browsers prompts to save the file.
+. Follow your browsers prompts to save the file.
 
 _Result:_. +
 The datastore is exported as a YAML file.
