--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_reset_the_Datastore_to_the_default1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/To_reset_the_Datastore_to_the_default1.adoc
@@ -2,14 +2,12 @@
 
 This procedure shows you how reset datastore to default.
 
-Navigate to AutomateImport/Export.
+. Navigate to `Automate` -> `Import/Export`.
 
-Export the datastore so that you have a backup.
+. Export the datastore so that you have a backup.
 
-Click image:../images/2098.png[image] (Reset all Datastore custom classes
-and instances to default).
+. Click image:../images/2098.png[image] (`Reset all Datastore custom classes and instances to default`).
 
-Read the prompt warning you that communication with the datastore will
-be lost and all classes and instances will be cleared and reset.
+. Read the prompt warning you that communication with the datastore will be lost and all classes and instances will be cleared and reset.
 
-After reading the prompt, click OK.
+. After reading the prompt, click `OK`.
