Minor edits during peer review.

--- a/doc-NetApp_Storage_Integration_Guide/Installation.adoc
+++ b/doc-NetApp_Storage_Integration_Guide/Installation.adoc
@@ -5,8 +5,6 @@
 
 The procedure describes the steps to install the NetApp SDK.
 
-==== To Install the NetApp SDK
-
 [arabic]
 . From the +NetApp+ site, download the +SDK+ to +/var/www/miq/vmdb/lib+. The file name is in the format +netapp-manageability-sdk-abc.0Pxyz.zip+. You need to be a NetApp customer to obtain this file.
 . Unzip the file by logging into an +SSH+ session on the appliance, and type:
@@ -31,9 +29,7 @@ service evmserverd restart
 
 === Enabling Storage Features in CFME
 
-The procedure describes the steps to enable storage features in the CloudForms Management Engine (CFME).
-
-==== To Enable Storage Features in the CFME
+This procedure describes the steps to enable storage features in the CloudForms Management Engine (CFME).
 
 [arabic]
 . Log in to the dashboard.
@@ -57,9 +53,7 @@ product:
 
 === Enabling the Storage Inventory Server Roles
 
-The procedure describes the steps to enable storage inventory server roles.
-
-==== To Enable the Storage Inventory Server Roles
+This procedure describes the steps to enable storage inventory server roles.
 
 [arabic]
 . Log in to the dashboard.
@@ -73,9 +67,8 @@ The procedure describes the steps to enable storage inventory server roles.
 
 === Adding a Storage Manager
 
-The procedure describes the steps to add a storage manager.
+This procedure describes the steps to add a storage manager.
 
-==== To Add a Storage Manager
 . Navigate to +Storage+ → +Storage Manager+. 
 . Click +Configuration+.
 . Click +Add a New Storage Manager+.
