--- a/doc-NetApp_Storage_Integration_Guide/Introduction.adoc
+++ b/doc-NetApp_Storage_Integration_Guide/Introduction.adoc
@@ -13,19 +13,19 @@ Some technology preview features may only be available for specific hardware arc
 
 The following terms are used throughout this document.
 
-+Filer+ 
+*Filer* 
 
 A Filer is a set of hardware, software, and disks specifically designed to provide fast and reliable storage. The Filer page shows all of the systems detected by the connected storage managers. Click on a Filer from the list to see a summary view of its properties, relationships, and tags.
 
-+LUN+   
+*LUN* 
 
 A storage volume is a set of disks connected to a storage system. The LUNs page shows all of the volumes detected by the connected SMI-S agents. Click on a storage volume in the list view to see a summary view of its properties, relationships, and tags.
 
-+File Share+
+*File Share*
 
 A File Share is an accessible directory location on a disk. The File Share page shows all of the volumes detected by the connected SMI-S agents. Click on a File Share in the list view to see a summary view of its properties, relationships, and tags.
 
-+Volume+
+*Volume*
 
 A Volume is an area of usable storage capacity on one or more physical disks. The Volumes page shows all of the Volumes detected by the connected Storage Manager. Click on a Volume in the list view to see a summary view of its properties, relationships, and tags.
 
